<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAF6D6"
        tools:context=".view.ui.setReminer.SetReminderFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/squick_densa"
            android:text="@string/set_a_reminder"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/drug_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_title"
            android:layout_marginTop="60dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/drug_name"
                android:textColor="#050505"
                android:textSize="20sp"
                app:fontFamily="@font/yekan"
                >

            </com.google.android.material.textview.MaterialTextView>

            <EditText
                android:id="@+id/set_drug_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/solid_bule_background"
                android:backgroundTint="@color/blue_background"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:text="asetaminophen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drug_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/drug_name"
            android:layout_marginTop="4dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/drug_type"
                android:textColor="#050505"
                android:textSize="20sp"
                app:fontFamily="@font/yekan">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_type"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/select"
                app:backgroundTint="@color/blue_background"
                android:fontFamily="@font/yekan"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:cornerRadius="15dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/drug_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/drug_type"
            android:layout_marginTop="4dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/first_day_take_medicine"
                android:textColor="#050505"
                android:textSize="20sp"
                app:fontFamily="@font/yekan"
                >

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_date"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/select"
                android:textSize="22sp"
                app:backgroundTint="@color/blue_background"
                android:fontFamily="@font/yekan"
                android:textColor="@color/colorPrimary"
                app:cornerRadius="15dp" />

        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/today_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_below="@id/drug_date"
            android:layout_marginLeft="230dp"
            android:buttonTint="#E91E63"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="20sp"/>


        <LinearLayout
            android:id="@+id/drug_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/today_button"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/first_time_take_medicine"
                android:textColor="#050505"
                android:textSize="20sp"
                app:fontFamily="@font/yekan">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_time"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/select"
                android:fontFamily="@font/yekan"
                android:textSize="22sp"
                app:backgroundTint="@color/blue_background"
                android:textColor="@color/colorPrimary"
                app:cornerRadius="15dp" />

        </LinearLayout>



        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/now_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now"
            android:layout_below="@id/drug_time"
            android:layout_marginLeft="230dp"
            android:buttonTint="#E91E63"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/number_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/now_button"
            android:layout_marginTop="14dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_of_drug"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                app:fontFamily="@font/yekan"
                android:fontFamily="@font/squick_densa"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/number"
                android:fontFamily="@font/yekan"
                android:textColor="#E91E63"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/number_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/number_linear"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/horizontal_recycler_view_style"/>



        <LinearLayout
            android:id="@+id/period_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/number_list"
            android:layout_marginTop="14dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/period_of_drug"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/yekan"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_period"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/yekan"
                android:textColor="#E91E63"
                android:layout_marginLeft="8dp"
                android:textSize="25sp"
                tools:text="daily" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/period_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/period_linear"
            android:orientation="horizontal"
            android:background="@drawable/horizontal_recycler_view_style"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/yekan"/>


    </RelativeLayout>
</layout>