<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.example.pillreminderstarting.view.other_fragments.DrugTypeDialogFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0B4FA"
        android:orientation="vertical"
        tools:context=".view.other_fragments.DrugTypeDialogFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/squick_densa"
            android:gravity="center"
            android:text="@string/what_type"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/pill"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/stroke_pint_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()-> fragment.setListeners(1)}">

            <TextView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pill"
                android:fontFamily="@font/yekan"
                android:textColor="#000000"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/pill_png_resized" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/capsule"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/stroke_pint_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()-> fragment.setListeners(2)}">

            <TextView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/capsule"
                android:fontFamily="@font/yekan"
                android:textColor="#000000"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/capsule_png_resized" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/stroke_pint_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()-> fragment.setListeners(3)}">

            <TextView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/draft"
                android:fontFamily="@font/yekan"
                android:textColor="#000000"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/bottle_png_resized" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/injection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/stroke_pint_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()-> fragment.setListeners(4)}">

            <TextView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/injection"
                android:fontFamily="@font/yekan"
                android:textColor="#000000"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/injection_png_resized" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/stroke_pint_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()-> fragment.setListeners(5)}">

            <TextView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/drug"
                android:textColor="#000000"
                android:fontFamily="@font/yekan"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/other_resized" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="بیخیال"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/yekan"
            android:onClick="@{()-> fragment.setListeners(0)}"/>


    </LinearLayout>
</layout>