<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".view.ui.login.LoginFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/launcher_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ابتدا وارد شوید"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_above="@id/username_box"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/yekan"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_box"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/user_name"
            android:textColorHint="#9C27B0"
            app:startIconDrawable="@drawable/ic_action_name"
            app:startIconTint="#9C27B0"
            app:boxBackgroundMode="filled"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="#9904B3"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:outlineAmbientShadowColor="@color/colorPrimaryDark"
                android:textColor="#050505"
                android:textSize="20sp"
                tools:text="salam" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_box"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/username_box"
            android:layout_marginTop="8dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/password"
            android:textColorHint="#9C27B0"
            app:startIconDrawable="@drawable/ic_action_key"
            app:startIconTint="#9C27B0"
            app:boxBackgroundMode="filled"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="#9904B3"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="#9904B3"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:outlineAmbientShadowColor="@color/colorPrimaryDark"
                android:textColor="#050505"
                android:textSize="20sp"
                tools:text="salam" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:fontFamily="@font/yekan"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/login_button"
            android:gravity="center"
            android:layout_marginTop="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/click_hear"
                android:textColor="#9C27B0"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_below="@id/login_button"
                android:layout_toRightOf="@id/text1"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="8dp"
                />
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/do_not_sign_in"
                android:textColor="#050505"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_below="@id/login_button"
                />

        </LinearLayout>



    </RelativeLayout>
</layout>